<resources>
    <string name="app_name">Dreamer</string>
    <string-array name="frequency_arr">
        <item>every 15 min</item>
        <item>every 30 min</item>
        <item>every hour</item>
        <item>every 4 hours</item>
        <item>once in 3 days</item>
    </string-array>
    <string name="button1">Intensity</string>
    <string name="delete_record">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="insistent_notif">Notifications</string>
    <string name="from">From</string>
    <string name="don_t_disturb_time">Night time</string>
    <string name="to">To</string>
    <string name="time">time</string>
    <string name="change">change</string>
    <string name="swipe_up">Swipe up</string>
    <string name="name_hint">Name</string>
    <string name="dream">DREAM</string>
    <string name="save">Save</string>
    <string name="cloud">cloud</string>
    <string name="settings">Settings</string>
    <string name="only_1_dream_in_free_app">Only 1 dream in free app</string>
    <string name="put_your_dream_here">Put your dream here</string>
</resources>
