<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="300dp"

    android:orientation="vertical"
    app:behavior_hideable="false"

    app:behavior_peekHeight="70dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#ffffff">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="80dp"
            android:layout_marginBottom="260dp"

            android:gravity="center"
            android:text="@string/swipe_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="353dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginBottom="148dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/button1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="202dp"
            android:layout_height="34dp"
            android:layout_marginBottom="161dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:entries="@array/frequency_arr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintVertical_bias="0.35000002" />

        <!--<TextView-->
        <!--android:id="@+id/currentDateTime"-->
        <!--android:layout_width="98dp"-->
        <!--android:layout_height="39dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:textSize="20sp"-->
        <!--android:onClick="setTime"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.625"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView2"-->
        <!--app:layout_constraintVertical_bias="0.58" />-->

        <!--<Button-->
        <!--android:id="@+id/timeButton"-->
        <!--android:layout_width="83dp"-->
        <!--android:layout_height="39dp"-->
        <!--android:layout_marginBottom="101dp"-->
        <!--android:layout_marginStart="22dp"-->
        <!--android:layout_marginTop="18dp"-->
        <!--android:onClick="setTime"-->
        <!--android:text="@string/change"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toEndOf="@+id/currentDateTime"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/spinner" />-->

        <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="68dp"-->
        <!--android:layout_height="39dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="@string/time"-->
        <!--android:textSize="20sp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.043"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView"-->
        <!--app:layout_constraintVertical_bias="0.075" />-->

        <Button
            android:id="@+id/DreamButton"
            android:layout_width="135dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="BtnCLick"

            android:text="@string/dream"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="220dp"
            android:layout_marginStart="163dp"
            android:layout_marginTop="275dp"
            android:text="@string/only_1_dream_in_free_app"
            android:textSize="10pt"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>