<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAFD9"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.atproduction.dreamer.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#ffffff"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/insistent_notif"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:textColor="#ffffff"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/don_t_disturb_time"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="49dp"
        android:layout_height="27dp"
        android:layout_marginBottom="382dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/from"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        app:layout_constraintVertical_bias="0.0" />

    <!--<TextClock-->
    <!--android:id="@+id/textClock2"-->
    <!--android:layout_width="77dp"-->
    <!--android:format12Hour="hh:mm"-->
    <!--android:layout_height="26dp"-->
    <!--android:layout_marginBottom="382dp"-->
    <!--android:layout_marginEnd="28dp"-->
    <!--android:layout_marginStart="23dp"-->
    <!--android:layout_marginTop="18dp"-->
    <!--android:onClick="SetClock2"-->
    <!--android:visibility="invisible"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toStartOf="@+id/textView5"-->
    <!--app:layout_constraintStart_toEndOf="@+id/textView4"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/switch2"-->
    <!--app:layout_constraintVertical_bias="0.0" />-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="49dp"
        android:layout_height="27dp"
        android:layout_marginBottom="382dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/to"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        app:layout_constraintVertical_bias="0.0" />

    <!--<TextClock-->
    <!--android:id="@+id/textClock3"-->
    <!--android:layout_width="77dp"-->
    <!--android:layout_height="27dp"-->
    <!--android:layout_marginBottom="382dp"-->
    <!--android:layout_marginEnd="46dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="18dp"-->
    <!--android:format12Hour="hh:mm"-->
    <!--android:onClick="SetClock3"-->
    <!--android:visibility="invisible"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/switch2"-->
    <!--app:layout_constraintVertical_bias="0.0" />-->

    <TextView
        android:id="@+id/test1"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:onClick="SetClock2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/test2"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="SetClock3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <!--<Button-->
    <!--android:id="@+id/button"-->
    <!--style="@style/Widget.AppCompat.Button"-->
    <!--android:layout_width="176dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:text="@string/save"-->
    <!--android:onClick="saving"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.932" />-->

</android.support.constraint.ConstraintLayout>
